--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
    </main>
    <footer>
     <a href="./index.html" class="logo">Web<span class="logotwo">Studio</span></a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <p class="footers">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
