--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
     </section>
    </main>
    <footer class="footer">
-    <a href="./index.html" class="logo">Web<span class="logotwo">Studio</span></a>
+    <a href="./index.html" class="logo">Web<span class="logothree">Studio</span></a>
     <p class="footers">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
