--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
          </address>
     </header>
     <main>
-        <section class="main-order">
+        <section class="main-order">    
             <h1 class="main-orders">Effective Solutionsfor Your Business</h1>
-            <button type="button" class="order-button">Order Service</button>
+            <button type="button" class="buttonPort">Order Service</button>
         </section>
         <section>
             <h2 class="main-text">Our Features</h2>
@@ -62,7 +62,7 @@
                 <li><img src="./images/photo.jpg" alt="photoPC" width="360"></li>
             </ul>
         </section>
-        <section>
+        <section class="team">
             <h2 class="team-head">Our Team</h2>
             <ul>
                 <li>
